[Chore #162208658] Add Parcel API Ressource documentation
